--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,5 +7,5 @@ RUN npm run build
 
 FROM nginx:alpine
 EXPOSE 3000
-COPY --from build /app/build /usr/share/nginx/html
+COPY --from=build /app/build /usr/share/nginx/html
 COPY ./default.conf /etc/nginx/conf.d/default.conf
