--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,17 @@ after_success:
   - docker push aleskotnik/multi-server
   - docker push aleskotnik/multi-worker
   - docker push aleskotnik/multi-nginx
+
+deploy:
+  provider: elasticbeanstalk
+  region: eu-west-3
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-eu-west-3-787424217056
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
+
