--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - PGHOST=postgres
       - PGDATABASE=postgres
       - PGPASSWORD=postgres_password
-      - PRPORT=5432
+      - PGPORT=5432
   client:
     build:
       dockerfile: Dockerfile.dev
