--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ services:
   - docker
 
 before_install:
-  - docker build -t aleskotnik/multi-client -f ./client/Dockerfile.dev ./client
+  - docker build -t aleskotnik/multi-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run aleskotnik/multi-client npm run test -- --coverage
+  - docker run aleskotnik/multi-test npm test -- --coverage
 
 after_success:
   - docker build -t aleskotnik/multi-client ./clinet
