--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,16 @@ services:
   - docker
 
 before_install:
-  - docker build -t aleskotnik/multi-test -f ./client/Dockerfile.dev ./client
+  - docker build -t aleskotnik/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run aleskotnik/multi-test npm test -- --coverage
+  - docker run aleskotnik/react-test npm test -- --coverage
 
 after_success:
-  - docker build -t aleskotnik/multi-client ./clinet
-  - docker build -t aleskotnik/multi-server ./server
-  - docker build -t aleskotnik/multi-worker ./worker
-  - docker build -t aleskotnik/multi-nginx ./nginx
+  - docker build -t aleskotnik/multi-client ./clinet --no-cache
+  - docker build -t aleskotnik/multi-server ./server --no-cache
+  - docker build -t aleskotnik/multi-worker ./worker --no-cache
+  - docker build -t aleskotnik/multi-nginx ./nginx --no-cache
 
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
